--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "node": "*"
   },
   "dependencies": {
-    "vue-mixins": "^0.2.13"
+    "vue-mixins": "^0.2.18"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.25.0",
     "gh-pages": "^0.11.0",
-    "karma": "^1.1.2",
+    "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-chai-dom": "^1.1.0",
     "karma-chai-spies": "^0.1.4",
-    "karma-chrome-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "karma-sourcemap-loader": "^0.3.7",
@@ -38,12 +38,12 @@
     "karma-vue-component": "^0.1.0",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
-    "pug": "^2.0.0-beta5",
+    "pug": "^2.0.0-beta6",
     "script-runner": "^0.1.5",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.2.0",
-    "template-html-loader": "0.0.3",
+    "stylus-loader": "^2.3.1",
+    "velocity-animate": "^1.2.3",
     "vue": "^1.0.26",
     "vue-compiler": "^0.3.0",
     "vue-dev-server": "^0.2.10",
@@ -51,7 +51,7 @@
     "vue-loader": "^8.5.3",
     "vue-style-loader": "^1.0.0",
     "vueify-insert-css": "^1.0.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.2"
   },
   "keywords": [
     "collapsible",
@@ -64,7 +64,7 @@
     "build:webpack": "webpack --config build/webpack.config.coffee",
     "build": "run-npm build:*",
     "dev": "vue-dev-server",
-    "watch": "karma start --browsers Chrome --auto-watch --reporters spec",
+    "watch": "karma start --browsers Chromium --auto-watch --reporters spec",
     "test": "karma start --single-run",
     "preversion": "npm test",
     "version": "npm run build && git add .",
